--- a/_config.yml
+++ b/_config.yml
@@ -111,3 +111,8 @@ browsersync:
   ghostMode:
     scroll: true
   instanceName: "uniqueString"
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
