--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -49,9 +49,10 @@ algolia_search:
   hits:
     per_page: 6
 
+#本地搜索
 # Local search
 local_search:
-  enable: false
+  enable: true
   preload: false
   CDN:
 
@@ -88,31 +89,31 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://s1.328888.xyz/2022/06/16/pjVjX.png
+index_img: https://s2.328888.xyz/2022/06/28/62ba60eac6c6a.png
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: https://s1.328888.xyz/2022/06/16/p62he.png
+default_top_img: https://s2.328888.xyz/2022/06/28/62babd5649056.png
 
 # The banner image of archive page
 archive_img: 
 
 # If the banner of tag page not setting, it will show the top_img
 # note: tag page, not tags page (子標籤頁面的 top_img)
-tag_img: https://s1.328888.xyz/2022/06/16/p6AMq.png
+tag_img: https://s2.328888.xyz/2022/06/28/62babd586a68a.png
 
 # The banner image of tag page
 # format:
 #  - tag name: xxxxx
-tag_per_img: https://s1.328888.xyz/2022/06/16/p68YO.png
+tag_per_img: https://s2.328888.xyz/2022/06/28/62babd528c2ec.png
 
 # If the banner of category page not setting, it will show the top_img
 # note: category page, not categories page (子分類頁面的 top_img)
-category_img: https://s1.328888.xyz/2022/06/16/p62he.png
+category_img: https://s2.328888.xyz/2022/06/28/62babd5649056.png
 
 # The banner image of category page
 # format:
 #  - category name: xxxxx
-category_per_img: https://s1.328888.xyz/2022/06/16/p6iPt.png
+category_per_img: https://s2.328888.xyz/2022/06/28/62babd56c6f57.png
 
 cover:
   # display the cover or not (是否顯示文章封面)
@@ -125,10 +126,14 @@ cover:
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
     - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
-    - https://s1.328888.xyz/2022/06/16/p6AMq.png
-    - https://s1.328888.xyz/2022/06/16/p68YO.png
-    - https://s1.328888.xyz/2022/06/16/p62he.png
-    - https://s1.328888.xyz/2022/06/16/p6iPt.png
+    - https://s2.328888.xyz/2022/06/28/62babd586a68a.png
+    - https://s2.328888.xyz/2022/06/28/62babd528c2ec.png
+    - https://s2.328888.xyz/2022/06/28/62babd5649056.png
+    - https://s2.328888.xyz/2022/06/28/62babd56c6f57.png
+#高质量保真图片
+#网站 https://i.imgloc.com/user/luochen
+
+
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
